# Decomposing-Polyhedra-into-Boxes

./: .gitignore  README.md  decompose_PSLGs.py  decompose_histogram_polyhedra.py  generate_PSLG_instances.py  generate_general_orthogonal_polyhedra.py  generate_histogram_polyhedra.py  orthogonal_dcel.py  orthogonal_ray_shooting.py  polyhedron.scad  pyproject.toml
Histogram_Polyhedra_Instances/: instance_002.pkl  instance_003.pkl  instance_004.pkl  instance_005.pkl  instance_007.pkl  instance_010.pkl  instance_012.pkl  instance_013.pkl  instance_015.pkl  instance_016.pkl  instance_017.pkl  instance_020.pkl  instance_022.pkl  instance_026.pkl  instance_030.pkl  instance_031.pkl  instance_032.pkl  instance_033.pkl  instance_034.pkl  instance_041.pkl  instance_042.pkl  instance_044.pkl  instance_045.pkl  instance_047.pkl  instance_053.pkl  instance_058.pkl  instance_061.pkl  instance_062.pkl  instance_064.pkl  instance_065.pkl  instance_069.pkl  instance_072.pkl  instance_075.pkl  instance_076.pkl  instance_081.pkl  instance_082.pkl  instance_083.pkl  instance_086.pkl  instance_088.pkl  instance_089.pkl  (+453 more)
Histogram_Polyhedra_Instances_json/: instance_001_001.json  instance_001_002.json  instance_001_003.json  instance_001_004.json  instance_001_005.json  instance_001_006.json  instance_001_007.json  instance_001_008.json  instance_001_009.json  instance_002_001.json  instance_002_002.json  instance_002_003.json  instance_002_004.json  instance_002_005.json  instance_002_006.json  instance_002_007.json  instance_002_008.json  instance_002_009.json  instance_003_001.json  (+8972 more)
(+10501 files in other folders)
