[project]
name = "decomposing-polyhedra-into-boxes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "intervaltree>=3.1.0",
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "shapely>=2.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
